# advent-of-code

./: .gitignore  README.md  pyproject.toml  python_runner.py
src/python/year_2015/: solution_2015_day_01.py  solution_2015_day_02.py  solution_2015_day_03.py  solution_2015_day_04.py  solution_2015_day_05.py  solution_2015_day_06.py  solution_2015_day_07.py  solution_2015_day_08.py  solution_2015_day_09.py  solution_2015_day_10.py  solution_2015_day_11.py  solution_2015_day_12.py  solution_2015_day_13.py  solution_2015_day_14.py  solution_2015_day_15.py  solution_2015_day_16.py  solution_2015_day_17.py  solution_2015_day_18.py  solution_2015_day_19.py  solution_2015_day_20.py  solution_2015_day_21.py  solution_2015_day_22.py  solution_2015_day_23.py  solution_2015_day_24.py  solution_2015_day_25.py
src/python/year_2016/: solution_2016_day_01.py  solution_2016_day_02.py  solution_2016_day_03.py  solution_2016_day_04.py  solution_2016_day_05.py  solution_2016_day_06.py  solution_2016_day_07.py  solution_2016_day_08.py  solution_2016_day_09.py  solution_2016_day_10.py  solution_2016_day_11.py  solution_2016_day_12.py  solution_2016_day_13.py  solution_2016_day_14.py  solution_2016_day_15.py  solution_2016_day_16.py  solution_2016_day_17.py  solution_2016_day_18.py  solution_2016_day_19.py  solution_2016_day_20.py  solution_2016_day_21.py  solution_2016_day_22.py  solution_2016_day_23.py  solution_2016_day_24.py  solution_2016_day_25.py
src/python/year_2017/: solution_2017_day_01.py  solution_2017_day_02.py  solution_2017_day_03.py  solution_2017_day_04.py  (+21 more)
(+182 files in other folders)
